--- a/ros-cslam/src/cslam_diagnostics/ui/diagnostics_ui.ui
+++ b/ros-cslam/src/cslam_diagnostics/ui/diagnostics_ui.ui
@@ -6,48 +6,106 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>689</width>
-    <height>511</height>
+    <width>670</width>
+    <height>547</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>CSLAM Diagnostics</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QTableWidget" name="tableWidget">
+   <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>20</y>
-      <width>671</width>
-      <height>421</height>
+      <x>12</x>
+      <y>19</y>
+      <width>651</width>
+      <height>471</height>
      </rect>
     </property>
-    <column>
-     <property name="text">
-      <string>Device</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Last Msg</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Diff</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>First Msg</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Status</string>
-     </property>
-    </column>
+    <property name="currentIndex">
+     <number>1</number>
+    </property>
+    <widget class="QWidget" name="tab">
+     <attribute name="title">
+      <string>Apriltags</string>
+     </attribute>
+     <widget class="QTableWidget" name="table_apriltags">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>10</y>
+        <width>631</width>
+        <height>421</height>
+       </rect>
+      </property>
+      <column>
+       <property name="text">
+        <string>Device</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Last Msg</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Diff</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>First Msg</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Status</string>
+       </property>
+      </column>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="tab_2">
+     <attribute name="title">
+      <string>Odometry</string>
+     </attribute>
+     <widget class="QTableWidget" name="table_odometry">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>10</y>
+        <width>631</width>
+        <height>421</height>
+       </rect>
+      </property>
+      <column>
+       <property name="text">
+        <string>Device</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Last Msg</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Diff</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>First Msg</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Status</string>
+       </property>
+      </column>
+     </widget>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -55,7 +113,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>689</width>
+     <width>670</width>
      <height>25</height>
     </rect>
    </property>
